<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">一直娱商家版</string>

    <string name="str_gnxt">国内系统</string>
    <string name="str_hwxt">海外系统</string>
    <string name="str_home">首页</string>
    <string name="str_message">消息</string>
    <string name="str_mine">我的</string>
    <string name="str_login_title">登录一直娱管理端</string>
    <string name="str_hint_login_account">请输入登录账号</string>
    <string name="str_hint_login_password">请输入登录密码</string>
    <string name="str_hint_login_code">请输入图形验证码</string>
    <string name="str_details">详情</string>
    <string name="str_all_order">全部订单</string>
    <string name="str_order_manager">订单管理</string>
    <string name="str_commodity_manager">商品管理</string>
    <string name="str_other_manager">其他管理</string>
    <string name="str_about_commodity_sort">关于商品排序</string>
    <string name="str_toPay">待支付</string>
    <string name="str_toSend">待发货</string>
    <string name="str_toPayWK">待付尾款</string>
    <string name="str_wk_details">尾款详情</string>
    <string name="str_toRefund">待退款</string>
    <string name="str_sale_commodity">售中商品</string>
    <string name="str_out_commodity">下架商品</string>
    <string name="str_waiting_audit">待审核</string>
    <string name="str_add_vip_commodity">添加VIP商品</string>
    <string name="str_subject_manager">专题管理</string>
    <string name="str_add_subject">添加专题</string>
    <string name="str_freight_template_manager">运费模板管理</string>
    <string name="str_add_template">添加模板</string>
    <string name="str_add">添加</string>
    <string name="str_select_sort">精选排序</string>
    <string name="str_vip_template_sort">VIP模板排序</string>
    <string name="str_activity_sort">活动推荐排序</string>
    <string name="str_add_account">添加账号</string>
    <string name="str_merge">合并</string>
    <string name="str_merge_no">非合并</string>
    <string name="str_shelves">上架</string>
    <string name="str_shelves_down">下架</string>
    <string name="str_setting_sort">设置排序</string>
    <string name="str_edit">编辑</string>
    <string name="str_edit_can">可编辑</string>
    <string name="str_edit_can_not">不可编辑</string>
    <string name="str_mandatory">必选</string>
    <string name="str_mandatory_not">非必选</string>
    <string name="str_delete">删除</string>
    <string name="str_dismiss">取消</string>
    <string name="str_save">保存</string>
    <string name="str_reset">重置</string>
    <string name="str_confirm">确定</string>
    <string name="str_screen">筛选</string>
    <string name="str_search">搜索</string>
    <string name="str_details_take">收货信息</string>
    <string name="str_commodity_label">商品标签：</string>
    <string name="str_more">更多</string>
    <string name="str_pack_up">收起</string>
    <string name="str_limit_count">限购数量</string>
    <string name="str_adjust_inventory">调整库存</string>
    <string name="str_sort_setting">设置排序</string>
    <string name="str_top">置顶</string>
    <string name="str_inventory_up">增加库存</string>
    <string name="str_inventory_down">减少库存</string>
    <string name="str_hidden_sale">隐藏销量</string>
    <string name="str_show_sale">展示销量</string>
    <string name="str_hidden_commodity">隐藏该商品</string>
    <string name="str_show_commodity">显示该商品</string>
    <string name="str_setting_refund">设置退款</string>
    <string name="str_setting_rank_count">设置排行榜数量</string>
    <string name="str_copy_link">复制链接</string>
    <string name="str_copy_link_test">复制测试链接</string>
    <string name="str_lock_additional_address">锁定附加信息和收货地址</string>
</resources>