<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="item"
            type="com.idolmedia.yzymanager.viewmodel.main.ItemHomeBean" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@color/white">

        <com.idolmedia.yzymanager.widget.BoldTextView
            android:id="@+id/tv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:text="@string/str_commodity_manager"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tv_dzf"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:paddingTop="18dp"
            android:src="@mipmap/ic_shouzhongshangpin"
            android:onClick="@{()->item.onClickCommodityManager(tvDzf,0)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order"
            app:layout_constraintEnd_toStartOf="@id/tv_dfh"/>

        <ImageView
            android:id="@+id/tv_dfh"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:paddingTop="18dp"
            android:src="@mipmap/ic_xiajiashangpin"
            android:onClick="@{()->item.onClickCommodityManager(tvDzf,1)}"
            app:layout_constraintTop_toTopOf="@id/tv_dzf"
            app:layout_constraintStart_toEndOf="@id/tv_dzf"
            app:layout_constraintEnd_toStartOf="@id/tv_dfwk"/>

        <ImageView
            android:id="@+id/tv_dfwk"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:paddingTop="18dp"
            android:src="@mipmap/ic_daishenhe"
            android:onClick="@{item::onClickAudit}"
            app:layout_constraintTop_toTopOf="@id/tv_dzf"
            app:layout_constraintStart_toEndOf="@id/tv_dfh"
            app:layout_constraintEnd_toStartOf="@id/tv_dtk"/>

        <View
            android:id="@+id/view_message"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_dfwk"
            app:layout_constraintEnd_toEndOf="@id/tv_dfwk"/>

        <com.idolmedia.yzymanager.widget.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:minWidth="12dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:includeFontPadding="false"
            visible="@{item.visibleAudit}"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="99+"
            android:text="@{item.strAuditCount}"
            android:textSize="9sp"
            android:background="@drawable/shape_red_bg"
            app:layout_constraintStart_toStartOf="@id/view_message"
            app:layout_constraintBottom_toBottomOf="@id/view_message"
            app:layout_constraintTop_toTopOf="@id/view_message"
            app:layout_constraintEnd_toEndOf="@id/view_message"/>

        <ImageView
            android:id="@+id/tv_dtk"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:paddingTop="18dp"
            android:src="@mipmap/ic_add_blue"
            android:onClick="@{item::onClickCommodity}"
            android:visibility="@{item.visibleCommodityAdd}"
            app:layout_constraintTop_toTopOf="@id/tv_dzf"
            app:layout_constraintStart_toEndOf="@id/tv_dfwk"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_dzf_tip"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:minWidth="60dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/str_sale_commodity"
            android:onClick="@{()->item.onClickCommodityManager(tvDzf,0)}"
            app:layout_constraintStart_toStartOf="@id/tv_dzf"
            app:layout_constraintEnd_toEndOf="@id/tv_dzf"
            app:layout_constraintTop_toBottomOf="@id/tv_dzf"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:minWidth="60dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="待上架商品"
            android:onClick="@{()->item.onClickCommodityManager(tvDzf,1)}"
            app:layout_constraintStart_toStartOf="@id/tv_dfh"
            app:layout_constraintEnd_toEndOf="@id/tv_dfh"
            app:layout_constraintTop_toTopOf="@id/tv_dzf_tip"
            app:layout_constraintBottom_toBottomOf="@id/tv_dzf_tip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:minWidth="60dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="@string/str_waiting_audit"
            android:text="@{item.strAudit}"
            android:onClick="@{item::onClickAudit}"
            app:layout_constraintStart_toStartOf="@id/tv_dfwk"
            app:layout_constraintEnd_toEndOf="@id/tv_dfwk"
            app:layout_constraintTop_toTopOf="@id/tv_dzf_tip"
            app:layout_constraintBottom_toBottomOf="@id/tv_dzf_tip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="@string/str_add_vip_commodity"
            android:text="@{item.strCommodityAdd}"
            android:onClick="@{item::onClickCommodity}"
            android:visibility="@{item.visibleCommodityAdd}"
            app:layout_constraintStart_toStartOf="@id/tv_dtk"
            app:layout_constraintEnd_toEndOf="@id/tv_dtk"
            app:layout_constraintTop_toTopOf="@id/tv_dzf_tip"
            app:layout_constraintBottom_toBottomOf="@id/tv_dzf_tip"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
